内容の変更

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>indexサンプル</title>
     </head>
     <body>
-        <div>VSCodeでHTML作成してみた</div>
+        <div>インデックスファイル</div>
     </body>
 </html>
